--- a/TAREA/style.css
+++ b/TAREA/style.css
@@ -1,15 +1,14 @@
 html {
-    background-color: black;
+    background-color: #272b33;
+    color: white;
 }
 
 .contenedor {
-    text-align: left;
-    color: white;
-    background-color: grey;
-    border: 2px solid black;
+    background-color: #3c3e44;
+    /* border: 2px solid black; */
     border-radius: 10px;
     width: 550px; /* ancho */
-    height: 250px; /* alto */
+    height: 224px; /* alto */
     display: flex; /* separa divs */
     gap: 10px; /* crea una sangria, ponele :v */
 }
@@ -18,9 +17,13 @@ img {
     border-radius: 8px;
 }
 
-/* h2 {
-    padding: 1px;
-} */
+h2 {
+    margin-bottom: 0px;
+}
+
+p {
+    margin-top: 0px;
+}
 
 
 html{
