--- a/Tarea2-Ejercicio2/style.css
+++ b/Tarea2-Ejercicio2/style.css
@@ -1,12 +1,10 @@
 
 html {
-    font-family: "Roboto", sans-serif;
+    font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
+}
 
 body {
     background-color: #0e4c75;
@@ -15,8 +13,8 @@ body {
 .contenedor {
     margin: auto;
     margin-top: 100px;
-    width: 275px;
-    height: 350px;
+    width: 235px;
+    height: 294px;
     background-color: #3282b5;
     box-shadow: 0px 0px 15px #26292e;
     border-radius: 4px; 
@@ -30,17 +28,28 @@ h2 {
 
 input {
     padding: 8px;
-    margin: 4px;
+    margin: 5px;
+    border-radius: 3px;
+    border-color: white;
 }
 
 h6 {
     color: #8ad0f8;
     text-align: center;
     font-size: 10px;
-    margin: 0;
+    margin: 6px 0px;
 }
 
-.button {
+button {
+    margin-top: 12px;
     color: black;
-    background-color: #bbe1f8;
+    background-color: #bbe1f8;   
+    border-color: #bbe1f8;
+    border-radius: 3px;
+    width: 193px;
+    height: 34px;
+}
+
+a {
+    text-decoration: none;
 }
