--- a/grid/styles.css
+++ b/grid/styles.css
@@ -8,10 +8,15 @@ html {
 
 body {
   background-image: url("https://wallpapers.com/images/featured/pokemon-hd-fazqcs1tmwwte1ap.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .grilla {
   display: grid;
+  /* grid-template-columns:repeat(auto-fill, minmax(200px, 1fr); */
+
   /* grid-template-columns: 500px 500px 500px; */
   /* grid-template-columns: repeat(3, 500px); */
   grid-template-columns: repeat(
@@ -20,6 +25,8 @@ body {
   ); /* fr es una fraccion y divide la pagina en la
   cantidad que diga el primer valor de la funcion*/
   grid-auto-rows: auto;
+  gap: 10px;
+  text-align: center;
 }
 
 img {
@@ -30,11 +37,71 @@ img {
 }
 
 .cont-zygarde {
+  border-radius: 20px;
+  border: 2px solid black;
   background-color: grey;
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1),
+    box-shadow 0.3s ease-out;
 }
+
+.cont-zygarde:hover {
+  transform: translateY(-10px);
+  box-shadow: 4px 4px 30px #1a1c1f;
+}
+
 .cont-kyogre {
+  border-radius: 20px;
+  border: 2px solid black;
   background-color: rgb(53, 53, 122);
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1),
+    box-shadow 0.3s ease-out;
 }
+
+.cont-kyogre:hover {
+  transform: translateY(-10px);
+  box-shadow: 4px 4px 30px #1a1c1f;
+}
+
 .cont-swampert {
+  border-radius: 20px;
+  border: 2px solid black;
   background-color: rgb(165, 66, 66);
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1),
+    box-shadow 0.3s ease-out;
+}
+
+.cont-swampert:hover {
+  transform: translateY(-10px);
+  box-shadow: 4px 4px 30px #1a1c1f;
+}
+
+@media (max-width: 1024px) {
+  .grilla {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .grilla {
+    grid-template-columns: 1fr;
+  }
+}
+
+li {
+  list-style: none;
+}
+
+nav {
+  margin: 10px 0px;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  border: 2px solid black;
+}
+
+h1 {
+  background-color: white;
+  text-align: center;
+  border-radius: 20px;
+  border: 2px solid black;
 }
